[gd_scene load_steps=5 format=3 uid="uid://b424bvcxa2fbn"]

[ext_resource type="Script" path="res://GUI/boss_overlay.gd" id="1_iury1"]
[ext_resource type="Texture2D" uid="uid://dscp8kmva7veh" path="res://GUI/boss_bar_progress.png" id="2_7ylhw"]
[ext_resource type="Texture2D" uid="uid://bf4fx3q5hdf8a" path="res://GUI/boss_bar_under.png" id="2_ahil6"]
[ext_resource type="PackedScene" uid="uid://1votnx34efdj" path="res://EntityComponents/BWShaderSetter.tscn" id="4_t7oo8"]

[node name="BossOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iury1")

[node name="HpBar" type="TextureProgressBar" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -506.0
offset_top = -100.0
offset_right = -303.6
offset_bottom = -84.0
grow_horizontal = 2
scale = Vector2(5, 5)
step = 0.01
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("2_ahil6")
texture_progress = ExtResource("2_7ylhw")

[node name="BwShaderSetter" parent="." instance=ExtResource("4_t7oo8")]
